Update swagger definitions
