# storage/api-docs/api-docs.json
@@ -332,7 +332,12 @@
                         }
                     },
                     "429": {
-                        "description": "Too Many Attempts"
+                        "description": "Too Many Attempts",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
                     }
                 }
             },
@@ -402,11 +407,13 @@
                             }
                         }
                     },
-                    "401": {
-                        "description": "Unauthorized"
-                    },
                     "429": {
-                        "description": "Too Many Attempts"
+                        "description": "Too Many Attempts",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
                     }
                 }
             }
@@ -448,10 +455,28 @@
                         }
                     },
                     "404": {
-                        "description": "Product not found"
+                        "description": "Product not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Product not found."
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     },
                     "429": {
-                        "description": "Too Many Attempts"
+                        "description": "Too Many Attempts",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
                     }
                 }
             },
@@ -506,7 +531,20 @@
                         }
                     },
                     "404": {
-                        "description": "Product not found"
+                        "description": "Product not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Product not found."
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     },
                     "422": {
                         "description": "Validation error",
@@ -535,11 +573,13 @@
                             }
                         }
                     },
-                    "401": {
-                        "description": "Unauthorized"
-                    },
                     "429": {
-                        "description": "Too Many Attempts"
+                        "description": "Too Many Attempts",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
                     }
                 }
             },
@@ -567,18 +607,33 @@
                         "description": "Product deleted successfully"
                     },
                     "404": {
-                        "description": "Product not found"
-                    },
-                    "401": {
-                        "description": "Unauthorized"
+                        "description": "Product not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Product not found."
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     },
                     "429": {
-                        "description": "Too Many Attempts"
+                        "description": "Too Many Attempts",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
                     }
                 }
             }
         },
-        "/varinats": {
+        "/variants": {
             "get": {
                 "tags": [
                     "Variants"
@@ -613,7 +668,8 @@
                         "description": "Filter variants by product ID",
                         "required": false,
                         "schema": {
-                            "type": "integer"
+                            "type": "string",
+                            "format": "uuid"
                         }
                     }
                 ],
@@ -654,31 +710,22 @@
                         }
                     },
                     "429": {
-                        "description": "Too Many Attempts"
+                        "description": "Too Many Attempts",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
                     }
                 }
-            }
-        },
-        "/products/{product_id}/variants": {
+            },
             "post": {
                 "tags": [
                     "Variants"
                 ],
                 "summary": "Create a new variant",
-                "description": "Creates a new variant for a specific product",
+                "description": "Creates a new variant",
                 "operationId": "storeVariant",
-                "parameters": [
-                    {
-                        "name": "product_id",
-                        "in": "path",
-                        "description": "ID of the product",
-                        "required": true,
-                        "schema": {
-                            "type": "string",
-                            "format": "uuid"
-                        }
-                    }
-                ],
                 "requestBody": {
                     "description": "Variant data",
                     "required": true,
@@ -710,9 +757,6 @@
                             }
                         }
                     },
-                    "404": {
-                        "description": "Product not found"
-                    },
                     "422": {
                         "description": "Validation error",
                         "content": {
@@ -738,6 +782,14 @@
                                     },
                                     "type": "object"
                                 }
+                            }
+                        }
+                    },
+                    "429": {
+                        "description": "Too Many Attempts",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
                             }
                         }
                     }
@@ -781,7 +833,28 @@
                         }
                     },
                     "404": {
-                        "description": "Variant not found"
+                        "description": "Variant not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Variant not found"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "429": {
+                        "description": "Too Many Attempts",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
                     }
                 }
             },
@@ -836,7 +909,20 @@
                         }
                     },
                     "404": {
-                        "description": "Variant not found"
+                        "description": "Variant not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Variant not found"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     },
                     "422": {
                         "description": "Validation error",
@@ -863,6 +949,14 @@
                                     },
                                     "type": "object"
                                 }
+                            }
+                        }
+                    },
+                    "429": {
+                        "description": "Too Many Attempts",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
                             }
                         }
                     }
@@ -892,7 +986,28 @@
                         "description": "Variant deleted successfully"
                     },
                     "404": {
-                        "description": "Variant not found"
+                        "description": "Variant not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Variant not found"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "429": {
+                        "description": "Too Many Attempts",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
                     }
                 }
             }
@@ -972,7 +1087,12 @@
                         }
                     },
                     "429": {
-                        "description": "Too Many Attempts"
+                        "description": "Too Many Attempts",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
                     }
                 }
             },
@@ -1037,6 +1157,14 @@
                                 }
                             }
                         }
+                    },
+                    "429": {
+                        "description": "Too Many Attempts",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
                     }
                 }
             }
@@ -1080,6 +1208,14 @@
                                     },
                                     "type": "object"
                                 }
+                            }
+                        }
+                    },
+                    "429": {
+                        "description": "Too Many Attempts",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
                             }
                         }
                     }
@@ -1156,6 +1292,14 @@
                                 }
                             }
                         }
+                    },
+                    "429": {
+                        "description": "Too Many Attempts",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
                     }
                 }
             },
@@ -1205,6 +1349,14 @@
                                     },
                                     "type": "object"
                                 }
+                            }
+                        }
+                    },
+                    "429": {
+                        "description": "Too Many Attempts",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
                             }
                         }
                     }
